--- a/hex-collage/index.html
+++ b/hex-collage/index.html
@@ -8,9 +8,9 @@
 
   <title>hex collage</title>
 
-  <script src="libraries/p5.js"></script>
-  <script src="libraries/p5.dom.js"></script>
-  <script src="libraries/p5.sound.js"></script>
+  <script src="../p5.js"></script>
+  <script src="../p5.dom.js"></script>
+  <script src="../p5.sound.js"></script>
   <script src="sketch.js"></script>
 
   <style>
