Add rings and some other template stuff

--- a/hex-grow-01/index.html
+++ b/hex-grow-01/index.html
@@ -6,18 +6,20 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>cubes of some sort</title>
+  <title>colorful hexes that grow or something</title>
 
   <script src="../p5.js"></script>
   <script src="../p5.dom.js"></script>
   <script src="../p5.sound.js"></script>
   <script src="sketch.js"></script>
+  <script src="../CCapture.all.min.js"></script>
 
   <style>
     body {
-      margin: 0;
+      margin: 10px 0 0 0;
       padding: 0;
       overflow: hidden;
+      text-align: center;
     }
 
     canvas {
