--- a/beam-01/index.html
+++ b/beam-01/index.html
@@ -6,20 +6,19 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title></title>
+  <title>beam</title>
 
   <script src="../p5.js"></script>
   <script src="../p5.dom.js"></script>
   <script src="../p5.sound.js"></script>
   <script src="sketch.js"></script>
+  <script src="../p5.easycam.min.js"></script>
 
   <style>
     body {
       margin: 0;
       padding: 0;
       overflow: hidden;
-      text-align: center;
-      padding:10px;
     }
 
     canvas {
